--- a/practice 1.html
+++ b/practice 1.html
@@ -35,7 +35,7 @@
 
     <p>Okay, so thats all what I learn today thats so fun and see you next practices guys t('-'t).</p>
 
-    <a href="../index.html">home</a>
+    <a href="/practice 1.html">home</a>
 
 </body>
 </html>
