--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <p>happy watch my journey through click button bellow ! ":)"</p>
   <br>
   
-  <ul><a href="/practice-field/practice 1.html">Practice 1</a></ul>
+  <ul><a href="practice 1.html">Practice 1</a></ul>
 
 </body>
 </html>
