percobaan hyperlink ke 3

--- a/practice 1.html
+++ b/practice 1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Road To Fullsatck !</title>
     <link href='/style.css' rel='stylesheet'>
-    <meta name="description" content="Belajar Tag Paragraf <p>">
+    <meta name="description" content="Belajar Tag Paragraf">
     <meta name="keywords" content="Web Dev, Fullstack Dev, Frontend Dev, Backend Dev">
     <meta name="author" content="Ihsan Nursyahjiwa">
 </head>
