--- a/practice 1.html
+++ b/practice 1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Road To Fullsatck !</title>
+    <title>Practice 1 !</title>
     <link href='/style.css' rel='stylesheet'>
     <meta name="description" content="Belajar Tag Paragraf">
     <meta name="keywords" content="Web Dev, Fullstack Dev, Frontend Dev, Backend Dev">
