percobaan ke-4 file index satu folder dengan file tujuan

--- a/practice-field/practice 1.html
+++ b/practice-field/practice 1.html
@@ -35,7 +35,7 @@
 
     <p>Okay, so thats all what I learn today thats so fun and see you next practices guys t('-'t).</p>
 
-    <a href="../index.html">home</a>
+    <a href="index.html">home</a>
 
 </body>
 </html>
