Update Practice 3 (Heading)

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   <hr>
   <h1>Road TO Fullstack Project</h1>
   <p>
-    Hello guys, I'm Ihsan right now I have activity to learn html for start my journey becoming a fullstack dev. and also i'll make documentation on my journey like journaling what i've done on this page, now march 10th 2025 i'll start to documentation my journey to become a profesional fullstack developer.
+    Hello guys, I'm Ihsan right now I have activity to learn html for start my journey becoming a fullstack dev. and also i'll make documentation on my journey like journaling what i've done on this page, now march 09th 2025 i'll start to documentation my journey to become a profesional fullstack developer.
   </p>
   <br>
   <p>happy watch my journey through click button bellow ! ":)"</p>
   <br>
   
   <ul><a href="practice 1.html">Practice 1</a></ul>
+  <ul><a href="practice 2.html"><h3>Practice 2</h3></a></ul>
 
 </body>
 </html>
