--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   
   <ul><a href="practice 1.html">Practice 1</a></ul>
   <ul><a href="practice 2.html"><h3>Practice 2</h3></a></ul>
+  <ul><a href="practice3/practice 3.html"><h3>Practice 3</h3></a></ul>
 
 </body>
 </html>
