test hyperlink file in folder

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <ul><a href="practice 1.html">Practice 1</a></ul>
   <ul><a href="practice 2.html"><h3>Practice 2</h3></a></ul>
   <ul><a href="practice3/practice 3.html"><h3>Practice 3</h3></a></ul>
+  <a href="practice3/practice 3.html">test</a>
 
 </body>
 </html>
