Update Practice 3 final

--- a/practice3/practice 3.html
+++ b/practice3/practice 3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Road To Fullsatck !</title>
+        <title>Practice 3!</title>
         <link href='/style.css' rel='stylesheet'>
         <meta name="description" content="Road to be a Fullstack Developer">
         <meta name="keywords" content="Web Dev, Fullstack Dev, Frontend Dev, Backend Dev">
@@ -14,7 +14,43 @@
             <hr>
 
             <h1>Introduction</h1>
-            <p>Right now i've more insterest to learn about html and with this tag I've knowledge about how some page can move to another page. with "a" tag or hyperlink we </p>
+            <p>Right now i've more insterest to learn about html and with this tag I've knowledge about how some page can move to another page. with "a" tag or hyperlink we can move to another page by clicking the word we was make to be hyperlink before. </p>
+
+            <p>And now I was try to implement this tag on this web, you guys can access all of the exist page in web by clicking the context.</p>
+            <hr>
+
+            <h1>Implementation</h1>
+
+            <h2>1. Relative URL</h2>
+            <p>You guys can move to another page by clicking the context below :</p>
+
+            <ol><a href="../index.html"><h3><i>Home</i></h3></a></ol>
+            <ol><a href="../practice 1.html"><h3><i>Practice 1</i></h3></a></ol>
+            <ol><a href="../practice 2.html"><h3><i>Practice 2</i></h3></a></ol>
+
+            <p>How ?, did you guys can access the context above ?, thats cool right.</p>
+            <hr>
+
             
+
+            <h2>2. Page Anchor</h2>
+            <p>Here i just show to you guys about another type of hyperlink thats called "page anchor" you guys can move to other part in the same page instantly. Here the example :</p>
+
+            <ul><a href="page anchor.html"><h3><i>Page Anchor</i></h3></a></ul>
+
+            <p>Click the context above to see the example.</p>
+            <hr>
+
+            <h2>3. Atribute Target</h2>
+            <p>This is not the any type of hyperlink but this is atribute where can combine with "a" tag to open the hyperlink in another tab. Here the example :</p>
+
+            <ul><a href="page anchor.html" target="_blank"><h3><i>If you access this you will open new tab</i></h3></a></ul>
+            <p>Click the context above to see the example.</p>
+            <hr>
+
+            <ul>
+                <a href="../index.html"><h4><i>->Back to Home<-</i></h4></a>
+            </ul>
+
         </body>
     </head>
