--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <ul><a href="practice 1.html">Practice 1</a></ul>
   <ul><a href="practice 2.html"><h3>Practice 2</h3></a></ul>
   <ul><a href="practice3/practice 3.html"><h3>Practice 3</h3></a></ul>
+  <ul><a href="practice4/practice 4.html"><h3>Practice 4</h3></a></ul>
+
 
 </body>
 </html>
