--- a/practice4/practice 4.html
+++ b/practice4/practice 4.html
@@ -14,13 +14,15 @@
             <hr>
 
             <h1><i>Implementation.</i></h1>
-            <img src="../asset/uniga logo.jpeg" alt="Garut University Logo's" title="Garut University Logo's" width="35%">
+            <img src="../asset/uniga logo.jpeg" alt="Garut University Logo's" title="Garut University Logo's" width="10%">
             <hr>
 
             <h1><i>Implementation image with hyperlink</i></h1>
-            <a href="https://uniga.ac.id/">
-                <img src="../asset/uniga logo.jpeg" alt="Garut University Logo's" title="Garut University Logo's" width="35%">
+            <a href="https://uniga.ac.id/" target="_blank">
+                <img src="../asset/uniga logo.jpeg" alt="Garut University Logo's" title="Garut University Logo's" width="10%">
             </a>
+
+            <h4><a href="../index.html"><i>-> Back To Home <-</i></a></h4>
 
         </body>
     </head>
