--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
   <ul><a href="practice3/practice 3.html"><h3>Practice 3</h3></a></ul>
   <ul><a href="practice4/practice 4.html"><h3>Practice 4</h3></a></ul>
 
+  <ul>
+    <table border="1" cellspacing="0" cellpadding="5">
+      <thead>
+        <tr>
+          <th>Practice</th>
+          <th>Content</th>
+          <th>Date</th>
+          <th>Link</th>
+        </tr>
+      </thead>
+
+        <tbody>
+          <tr>
+            <td>Practice 5</td>
+            <td>Creating Table</td>
+            <td>11/03/2025</td>
+            <td><a href="practice5/practice 5.html">Link</a></td>
+          </tr>
+        </tbody>
+    </table>
+  </ul>
+
 
 </body>
 </html>
