--- a/practice4/practice 4.html
+++ b/practice4/practice 4.html
@@ -14,10 +14,13 @@
             <hr>
 
             <h1><i>Implementation.</i></h1>
+            <p>As you can see below right now we have the first image on our web, this image was called by "img" tag from asset in our directory. This is just usual image</p>
             <img src="../asset/uniga logo.jpeg" alt="Garut University Logo's" title="Garut University Logo's" width="10%">
             <hr>
 
             <h1><i>Implementation image with hyperlink</i></h1>
+            <p>And now, I will show you how to make a image with hyperlink. This is so simple, you just need to add "a" tag and "href" attribute on your "img" tag. And, you can clicking the image and you will directed to another web, here we go !</p>
+
             <a href="https://uniga.ac.id/" target="_blank">
                 <img src="../asset/uniga logo.jpeg" alt="Garut University Logo's" title="Garut University Logo's" width="10%">
             </a>
