Update Practice 6 (List)

--- a/index.html
+++ b/index.html
@@ -44,9 +44,20 @@
             <td>11/03/2025</td>
             <td><a href="practice5/practice 5.html">Link</a></td>
           </tr>
+
+          <tr>
+            <td>Practice 6</td>
+            <td>Creating List</td>
+            <td>12/03/2025</td>
+            <td><a href="Practice6/practice 6.html">Link</a></td>
+          </tr>
+
         </tbody>
     </table>
   </ul>
+
+
+
 
 
 </body>
