--- a/practice5/practice 5.html
+++ b/practice5/practice 5.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Belajar Table">
     <meta name="keywords" content="Web Dev, Fullstack Dev, Frontend Dev, Backend Dev">
     <meta name="author" content="Ihsan Nursyahjiwa">
-    <link href='/style.css' rel='stylesheet'>
+    <link href='../style.css' rel='stylesheet'>
 
 </head>
     <body>
