update yang kurang-kurang

--- a/Practice6/practice 6.html
+++ b/Practice6/practice 6.html
@@ -102,12 +102,12 @@
     <dl>
         <dt><h3>Personal information :</h3></dt>
 
-        <dt>Name :</dt>
-        <dd><i>Ihsan Nursyahjiwa</i></dd>
+        <dt><i>Name :</i></dt>
+        <dd>Ihsan Nursyahjiwa.</dd>
         <br>
 
         <dt><i>Gender :</i></dt>
-        <dd>Male</dd>
+        <dd>Male.</dd>
         <br>
 
         <dt><i>Birth :</i></dt>
@@ -125,15 +125,15 @@
         <dt><h3>Education :</h3></dt>
         
         <dt><i>School :</i></dt>
-        <dd>Garut University</dd>
+        <dd>Garut University.</dd>
         <br>
 
         <dt><i>Major :</i></dt>
-        <dd>Software Engineering</dd>
+        <dd>Software Engineering.</dd>
         <br>
 
         <dt><i>Semester :</i></dt>
-        <dd>Sixth Semester Student</dd>
+        <dd>Sixth Semester Student.</dd>
         <br>
 
         <dt><i>GPA :</i></dt>
