--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
             <td><a href="Practice6/practice 6.html">Link</a></td>
           </tr>
 
+          <tr>
+            <td>Practice 7</td>
+            <td>Creating Form</td>
+            <td>13/03/2025</td>
+            <td><a href="practice7/prcatice 7.html">Link</a></td>
+          </tr>
+
         </tbody>
     </table>
   </ul>
