Update Practice 8 CSS

--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
             <td><a href="practice7/prcatice 7.html">Link</a></td>
           </tr>
 
+          <tr>
+            <td colspan="4" style="text-align: center;">Basic CSS</td>
+          </tr>
+
+          <tr>
+            <td>Practice 8</td>
+            <td>Font Style</td>
+            <td>13/03/2025</td>
+            <td><a href="practice8 css/practice 1 with CSS.html">Link</a></td>
+          </tr>
+
         </tbody>
     </table>
   </ul>
