--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
             <td><a href="practice8 css/practice 1 with CSS.html">Link</a></td>
           </tr>
 
+          <tr>
+            <td>Practice 9</td>
+            <td>Text Style</td>
+            <td>14/03/2025</td>
+            <a href="practice9 css/practice 2 with CSS.html"></a>
+          </tr>
+
         </tbody>
     </table>
   </ul>
