Lupa link practice 9 di index

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <td>Practice 9</td>
             <td>Text Style</td>
             <td>14/03/2025</td>
-            <a href="practice9 css/practice 2 with CSS.html"></a>
+            <a href="practice9 css/practice 2 with CSS.html">Link</a>
           </tr>
 
         </tbody>
