update link practice 10 di index

--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
             <td><a href="practice9 css/practice 2 with CSS.html">Link</a></td>
           </tr>
 
+          <tr>
+            <td>Practice 10</td>
+            <td>Add Background</td>
+            <td>14/03/2025</td>
+            <td><a href="practice10 css/practice 3 with css.html">Link</a></td>
+          </tr>
+
         </tbody>
     </table>
   </ul>
