--- a/practice10 css/page anchor with css.html
+++ b/practice10 css/page anchor with css.html
@@ -8,6 +8,8 @@
         <meta name="description" content="Road to be a Fullstack Developer">
         <meta name="keywords" content="Web Dev, Fullstack Dev, Frontend Dev, Backend Dev">
         <meta name="author" content="Ihsan Nursyahjiwa">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+
 
         <body>
             <h1 id="top">Page Anchor Implementation</h1>
